# batched

./: Cargo.toml  LICENSE  README.md
batched/: Cargo.toml
batched/src/: error.rs  lib.rs  tracing.rs
batched/tests/: test.rs
batched_derive/: Cargo.toml
batched_derive/src/: builder.rs  lib.rs  parse.rs  types.rs  utils.rs
batched_test/: Cargo.toml
batched_test/src/: main.rs
tests/: Cargo.toml  macros.rs
tests/src/: error.rs  macro.rs
