[package]
name = "batched"
description = "rust macro util for batching expensive operations"
version = "0.2.1"
edition = "2024"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/hackermondev/batched"
keywords = ["batch", "performance", "efficient"]


[dependencies]
anyhow = "1.0.98"
batched_derive = { version = "0.2", path = "../batched_derive" }
