[package]
name = "batched"
description = "rust macro util for batching expensive operations"
version = "0.2.8"
edition = "2024"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/hackermondev/batched"
keywords = ["batch", "performance", "efficient"]

[features]
default = []
tracing_span = ["batched_derive/tracing_span"]
tracing_opentelemetry = ["opentelemetry", "tracing-opentelemetry"]

[dependencies]
anyhow = "1.0.98"
batched_derive = { version = "0.2.8", path = "../batched_derive" }
opentelemetry = { version = "0.30.0", optional = true }
tracing = "0.1.41"
tracing-opentelemetry = { version = "0.31.0", optional = true }
