[package]
name = "batched_derive"
description = "rust macro util for batching expensive operations"
version = "0.1.7"
edition = "2024"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/hackermondev/batched"
keywords = ["batch", "performance", "efficient"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
