[package]
name = "tests"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
anyhow = "1.0.98"
batched = { path = "../batched" }
batched_derive = { path = "../batched_derive" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"

[[test]]
name = "macro"
path = "src/macro.rs"

[[test]]
name = "error"
path = "src/error.rs"

[dependencies]
tracing-subscriber = "0.3.20"
